2007-03-25  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpContext.cs: AppGlobalResourcesAssembly static member stored in
	AppDomain for TARGET_JVM

2007-03-24  Marek Habersack  <mhabersack@novell.com>

	* HttpRuntime.cs: use ICalls.GetMachineConfigPath instead of
	opening the machine.config file and getting its path.

	* CapabilitiesLoader.cs: use HttpRuntime.MachineConfigurationDirectory 
	instead of opening the machine config file and getting its path.

2007-03-23  Konstantin Triger <kostat@mainsoft.com>

	* HttpApplication.cs: complete the pipeline in case of exception during
		InitOnce() to avoid a deadlock.

2007-03-22  Adar Wesley <adarw@mainsoft.com>

        * BrowserCapabilities.cs: Added implementation for all capabilities.
        changed implementation to throw when capability is not defined in browscaps.ini.

        * CapabilitiesLoader.cs: fixed parent resultion bug.  added internal support for
        browser and browsers capabilities.

2007-03-21  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpContext.jvm.cs, HttpRuntime.cs: cached instance of HttpRuntime
	in context in addition to AppDomain

2007-03-21  Vladimir Krasnov  <vladimirk@mainsoft.com>
	
	* HttpCookie.cs, HttpCookieCollection.cs: used OrdinalIgnoreCase
	StringComparer for cookies and values collections 

2007-03-21  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpApplication.cs: refactred handlers configuration section as
	member of class

2007-03-20  Marek Habersack  <mhabersack@novell.com>

	* HttpRequest.cs: implement AppRelativeCurrentExecutionFilePath.

2007-03-18 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtility.cs: fixed GetFileName(), GetExtension() methods.

2007-03-18 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtility.cs: fixed GetDirectory() method.

2007-03-15  Marek Habersack  <mhabersack@novell.com>

	* XmlSiteMapProvider.cs: handle cases with no default for the
	reskey properly.

2007-03-15 Igor Zelmanovich <igorz@mainsoft.com>
